Fix spacing
Why were there so many extra properties too? Right, webflow.

--- a/css/devchat.css
+++ b/css/devchat.css
@@ -164,14 +164,7 @@ a {
   position: fixed;
   right: 15px;
   bottom: 15px;
-  width: 180px;
-  height: 50px;
-  padding-top: 10px;
-  padding-left: 10px;
-  float: right;
-  border-style: none;
-  border-width: 1px;
-  border-color: hsla(0, 0%, 100%, .2);
+  padding: 10px;
   border-radius: 2px;
   background-color: hsla(0, 0%, 100%, .25);
   box-shadow: 0 11px 28px -21px #0c0061;
